# ChangeLog for gnome-base/gnome-desktop
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-desktop/ChangeLog,v 1.286 2010/11/02 02:01:43 ford_prefect Exp $

  02 Nov 2010; Arun Raghavan <ford_prefect@gentoo.org>
  gnome-desktop-2.32.0.ebuild:
  Slotmove gnome-desktop 2.32.0 to 2 to decrease confusion when slot 3 (for
  GNOME 3) comes in

  17 Oct 2010; Raúl Porcel <armin76@gentoo.org>
  gnome-desktop-2.30.2.ebuild:
  alpha/ia64/sh/sparc stable wrt #324077

  14 Oct 2010; Markus Meier <maekke@gentoo.org> gnome-desktop-2.30.2.ebuild:
  arm stable, bug #324077

*gnome-desktop-2.32.0 (09 Oct 2010)

  09 Oct 2010; Pacho Ramos <pacho@gentoo.org> +gnome-desktop-2.32.0.ebuild:
  Version bump for Gnome 2.32: added a configure option for not installing
  desktop docs if desired, don't use deprecated Gdk drawing APIs, other
  bugfixes and translation updates. Dropped intltoolize fix since it looks
  to be no longer required, bumped to EAPI3 and set GCONF_DEBUG as suggested
  by eva.

  08 Oct 2010; Gilles Dartiguelongue <eva@gentoo.org>
  -files/gnome-desktop-2.24.2-background.patch,
  -gnome-desktop-2.24.3-r1.ebuild, -gnome-desktop-2.26.3.ebuild,
  -gnome-desktop-2.28.1-r1.ebuild, -gnome-desktop-2.28.2.ebuild:
  Clean up old revisions.

  07 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
  gnome-desktop-2.30.2.ebuild:
  ppc64 stable wrt #324077

  11 Sep 2010; Joseph Jezak <josejx@gentoo.org> gnome-desktop-2.30.2.ebuild:
  Marked ppc for bug #324077.

  18 Aug 2010; Markus Meier <maekke@gentoo.org>
  gnome-desktop-2.28.2-r1.ebuild:
  arm stable, bug #314899

  14 Aug 2010; Raúl Porcel <armin76@gentoo.org>
  gnome-desktop-2.28.2-r1.ebuild:
  alpha/ia64/sh/sparc stable wrt #314899

  01 Aug 2010; Christian Faulhammer <fauli@gentoo.org>
  gnome-desktop-2.30.2.ebuild:
  x86 stable, bug 324077

  31 Jul 2010; Pacho Ramos <pacho@gentoo.org> gnome-desktop-2.30.2.ebuild:
  amd64 stable, bug 324077
