@@ -1,6 +1,11 @@
 # ChangeLog for gnome-base/gnome-desktop
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-desktop/ChangeLog,v 1.286 2010/11/02 02:01:43 ford_prefect Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-desktop/ChangeLog,v 1.287 2010/11/02 02:10:17 ford_prefect Exp $
+
+  02 Nov 2010; Arun Raghavan <ford_prefect@gentoo.org>
+  gnome-desktop-2.28.2-r1.ebuild, gnome-desktop-2.30.2.ebuild:
+  Slotmove gnome-desktop to 2 to decrease confusion when slot 3 (for GNOME
+  3) comes in
 
   02 Nov 2010; Arun Raghavan <ford_prefect@gentoo.org>
   gnome-desktop-2.32.0.ebuild:
